fixed light mode visibility issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,19 +34,19 @@
     --text-secondary: #ccd1d6;
     --heading-text: #000000;
 
-    --background: #ffffff;
+    --background: #fafafa;
     --foreground: var(--text-primary);
 
-    --primary: #eeeeee;
+    --primary: #d2d3db;
     --primary-foreground: var(--text-primary);
 
-    --secondary: #e0e0e0;
+    --secondary: #e4e5f1;
     --secondary-foreground: var(--text-primary);
 
-    --popover: var(--smoky);
-    --popover-foreground: var(--text-primary);
+    --popover: #484b6adf;
+    --popover-foreground: var(--text-secondary);
 
-    --muted: #f5f5f5;
+    --muted: #484B6A;
 
     --accent-0: #383a53;
     --accent: #484b6a;
@@ -57,9 +57,9 @@
     --destructive: #d9372b;
     --success: #27ae60;
 
-    --border: #e4e4e4;
+    --border: #c1c2d8;
     /* --border: #27272a; */
-    --input: #e4e4e4;
+    --input: var(--border);
     --ring: #090909;
 
     --radius: 0.5rem;
